# TimeSwipe.py

./: CMakeLists.txt  Dockerfile.arm  Dockerfile.arm64  MANIFEST.in  README.md  _bundle.py  build.sh  pwm.py  setup.py  test.py
.github/workflows/: docker_arm.yml  docker_arm64.yml  upload_release.yml
src/: timeswipe_py.cpp
